[package]
name = "density_function_lang"
version = "3.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
lazy_static = "1.4.0"
