[package]
name = "density_function_lang"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
lazy_static = "1.4.0"
